2025-12-29T00:59:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20562126380 # 1394
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-29
* notice: last 14d: unq all: 22 27
* notice: prev accum: outdated-unq outdated-all / unq all: 3086 5513 / 3116 5548
* notice: next accum: outdated-unq outdated-all / unq all: 3093 5521 / 3116 5548
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-14] / []

2025-12-28T01:00:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20546696487 # 1392
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-28
* notice: last 14d: unq all: 29 35
* notice: prev accum: outdated-unq outdated-all / unq all: 3071 5481 / 3115 5547
* notice: next accum: outdated-unq outdated-all / unq all: 3086 5513 / 3116 5548
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-13] / [2025-12-27]

2025-12-27T00:52:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20532092400 # 1390
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-27
* notice: last 14d: unq all: 41 66
* notice: prev accum: outdated-unq outdated-all / unq all: 3071 5481 / 3114 5546
* notice: next accum: outdated-unq outdated-all / unq all: 3071 5481 / 3115 5547
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-26]

2025-12-26T12:21:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20522339815 # 1389