@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-29T00:59:06Z",
-  "count_outdated" : 5521,
-  "uniques_outdated" : 3093,
-  "count" : 5548,
-  "uniques" : 3116,
+  "timestamp" : "2025-12-29T12:23:27Z",
+  "count_outdated" : 5523,
+  "uniques_outdated" : 3095,
+  "count" : 5550,
+  "uniques" : 3118,
   "clones" : [
-    {
-      "timestamp": "2025-12-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-12-16T00:00:00Z",
       "count": 9,
@@ -76,6 +67,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-29T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
