@@ -3,11 +3,6 @@
   "uniques": 22,
   "clones": [
     {
-      "timestamp": "2025-12-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2025-12-16T00:00:00Z",
       "count": 9,
       "uniques": 7
@@ -41,6 +36,11 @@
       "timestamp": "2025-12-27T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-29T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
