@@ -1,3 +1,12 @@
+2025-12-29T12:23:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20572797836 # 1395
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-29
+* notice: last 14d: unq all: 22 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 3093 5521 / 3116 5548
+* notice: next accum: outdated-unq outdated-all / unq all: 3095 5523 / 3118 5550
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-12-15] / [2025-12-29]
+
 2025-12-29T00:59:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20562126380 # 1394
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-29
